# crewai-multi-agent-starter

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/learn_crewai/: crew.py  main.py
