[project]
name = "learn_crewai"
version = "0.1.0"
description = "learn_crewai using crewAI"
authors = [{ name = "Evandro Henrique", email = "67719468+EvansHenriq@users.noreply.github.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.1,<2.0.0",
]

[project.scripts]
learn_crewai = "learn_crewai.main:run"
run_crew = "learn_crewai.main:run"
train = "learn_crewai.main:train"
replay = "learn_crewai.main:replay"
test = "learn_crewai.main:test"
run_with_trigger = "learn_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
